# DCVM

./: .gitignore  CMakeLists.txt  CMakeLists.var  README.md
cmake/: AddExternalDependency.cmake  Cmake.cmake  GroupFilesInIDE.cmake
core/: CMakeLists.txt  CMakeLists.var
core/include/: dcvm.h  foo.hpp
core/include/dcvm/: DCVMCloudDiskType.h  DCVMLogger.h
core/src/: dcvm.cpp  foo.cpp
core/src/CloudDisk/: CloudDiskControl.cpp  CloudDiskControl.hpp  ICloudDisk.hpp  ICloudDiskBase.hpp  ICloudDiskControl.hpp  ICloudDiskUnknown.hpp
core/src/CloudDisk/CompositeDisk/: CompositeDisk.hpp
core/src/CloudDisk/Yandex/: YandexDisk.hpp
core/src/h/: dcvm_types.hpp
dcvm/: CMakeLists.txt  CMakeLists.var
dcvm/include/: dcvm.h
dcvm/include/dcvm/: DCVMCloudDiskAPI.h  DCVMCloudProviderAPI.h  DCVMCloudStorage.h  DCVMError.h  DCVMLogger.h  DCVMSystemAPI.h  DCVMTypes.h  dcvm.h  dcvm_system.h
dcvm/include/dcvm/cpp/base/: DCVMFunctions.hpp  DCVMTypes.hpp  EASTLAllocator.hpp  MemoryBase.hpp  STLAllocator.hpp  SystemApi.hpp  dcvm_defines.hpp
dcvm/src/: dcvm.cpp
dcvm/src/CloudDisk/: ICloudDisk.hpp
dcvm/src/CloudDisk/CompositeDisk/: CompositeDisk.cpp
dcvm/src/CloudDiskManager/: CloudDiskManager.hpp  CloudDiskManager_impl.hpp
dcvm/src/base/: CloudProvider.hpp  DCVMFunctions.hpp  DCVMTypes.hpp  EASTLAllocator.hpp  ICloudDiskUnknown.hpp  MemoryBase.hpp  NameValuePair.hpp  STLAllocator.hpp  SystemApi.hpp  dcvm_defines.hpp
dcvm/src/clouddisk/: CloudDisk.cpp  CloudDisk.hpp
dcvm/src/clouddisk/objects/: CloudDiskDirectory.cpp  CloudDiskDirectory.hpp  CloudDiskFile.cpp  CloudDiskFile.hpp  CloudDiskObject.cpp  CloudDiskObject.hpp
dcvm/src/clouddiskmanager/: CloudDiskManager.cpp
dcvm/test/: DCVMCloudProvider.hpp  dcvm_cloudstorage_stub.cpp  dcvm_cloudstorage_stub.hpp  dcvm_control_utest.cpp  dcvm_systemapi_test.cpp  dcvm_systemapi_test.h  dcvm_utest_helper.hpp
dcvm_filemanager_cli/: CMakeLists.txt  CMakeLists.var
dcvm_filemanager_cli/src/dcvm_wrapper/: DCVMWrapper.cpp
dcvm_google/: CMakeLists.txt  CMakeLists.var
dcvm_google/include/dcvm/provider/: dcvm_google.h
dcvm_google/src/: DCVMGoogleCloudProvider.cpp  DCVMGoogleCloudProvider.hpp  dcvm_google.cpp
dcvm_provider/: CMakeLists.var
dcvm_provider/include/dcvm/provider/: DCVMCloudProvider.hpp  DCVMCryptoHelper.hpp
dcvm_provider/include/dcvm/provider/utilities/: DCVMUriBuilder.hpp
dcvm_provider/src/: DCVMCryptoHelper.cpp
dcvm_provider/src/utilities/: DCVMUriBuilder.cpp
dcvm_provider/src/utilities/conversions/: DCVMConversions.cpp
dcvm_provider/test/: dcvm_systemapi_test.cpp  dcvm_systemapi_test.h  dcvmconversions_utest.cpp  dcvmcryptohelper_utest.cpp  dcvmuribuilder_utest.cpp
dcvm_windows/: CMakeLists.var
dcvm_windows/include/system/: dcvm_windows.h
dcvm_windows/src/: dcvm_windows.cpp
doc/: DCVM.vpp  DCVM.vpp.bak_000f  DCVM.vpp.bak_001d  DCVM.vpp.bak_002d  DCVM.vpp.bak_003d  DCVM.vpp.bak_004d  DCVM.vpp.bak_005d  DCVM.vpp.bak_006d  DCVM.vpp.bak_007d  DCVM.vpp.bak_008d  DCVM.vpp.bak_009d  DCVM.vpp.bak_010d  DCVM.vpp.bak_011d
eastl/: CMakeLists.txt  CMakeLists.var
filemanager_cli/: CMakeLists.txt  CMakeLists.var
filemanager_cli/src/: DCVMTypes.hpp  main.cpp
filemanager_cli/src/dcvm_filemanager/tasks/: DCVMHelpTask.cpp  DCVMHelpTask.hpp  DCVMTask.cpp  DCVMTask.hpp
filemanager_cli/src/dcvm_filemanager/tasks/control/: DCVMControlTask.cpp  DCVMControlTask.hpp  DCVMDiskInfoTask.cpp  DCVMDiskInfoTask.hpp  DCVMDiskListTask.cpp  DCVMDiskListTask.hpp  DCVMDiskTask.cpp  DCVMDiskTask.hpp  DCVMProviderAuthTask.cpp  DCVMProviderAuthTask.hpp  (+6 more)
filemanager_cli/src/dcvm_wrapper/: DCVMWrapper.cpp  DCVMWrapper.hpp
system/: CMakeLists.txt  CMakeLists.var
system/windows/: CMakeLists.txt  CMakeLists.var
test/: CMakeLists.txt  CMakeLists.var
test/src/: main.cpp
(+1 files in other folders)
